v0.11.1/_sources/generated/statsmodels.tsa.statespace.mlemodel.MLEResults.rst.txt
statsmodels.tsa.statespace.mlemodel.MLEResults
==============================================

.. currentmodule:: statsmodels.tsa.statespace.mlemodel

.. autoclass:: MLEResults
   :exclude-members:

   
   
   .. rubric:: Methods

   .. autosummary::
      :toctree:

      ~MLEResults.append
      ~MLEResults.apply
      ~MLEResults.conf_int
      ~MLEResults.cov_params
      ~MLEResults.extend
      ~MLEResults.f_test
      ~MLEResults.forecast
      ~MLEResults.get_forecast
      ~MLEResults.get_prediction
      ~MLEResults.impulse_responses
      ~MLEResults.info_criteria
      ~MLEResults.initialize
      ~MLEResults.load
      ~MLEResults.normalized_cov_params
      ~MLEResults.plot_diagnostics
      ~MLEResults.predict
      ~MLEResults.remove_data
      ~MLEResults.save
      ~MLEResults.simulate
      ~MLEResults.summary
      ~MLEResults.t_test
      ~MLEResults.t_test_pairwise
      ~MLEResults.test_heteroskedasticity
      ~MLEResults.test_normality
      ~MLEResults.test_serial_correlation
      ~MLEResults.wald_test
      ~MLEResults.wald_test_terms
   
   
   
   
   
   .. rubric:: Properties

   .. autosummary::
      :toctree:

      ~MLEResults.aic
      ~MLEResults.aicc
      ~MLEResults.bic
      ~MLEResults.bse
      ~MLEResults.cov_params_approx
      ~MLEResults.cov_params_oim
      ~MLEResults.cov_params_opg
      ~MLEResults.cov_params_robust
      ~MLEResults.cov_params_robust_approx
      ~MLEResults.cov_params_robust_oim
      ~MLEResults.fittedvalues
      ~MLEResults.hqic
      ~MLEResults.llf
      ~MLEResults.llf_obs
      ~MLEResults.loglikelihood_burn
      ~MLEResults.mae
      ~MLEResults.mse
      ~MLEResults.pvalues
      ~MLEResults.resid
      ~MLEResults.sse
      ~MLEResults.states
      ~MLEResults.tvalues
      ~MLEResults.use_t
      ~MLEResults.zvalues
   
   
   